- 0.10 -
* various autoconf/automake fixes
* moved a few files around
* added a way to pass configure's --prefix option to the C++ files... isn't
counted in dependencies, though... need to figure out how to add it to config.h
* above feature is used when opening config files
* removed some old commented test code
* added qline for logging ADC lines in/out
* plugins actually work now :)
* moving logging facility to use iostreams library... I think I spend more
time on the logging than anything else :)
* logging facilities are actually part of class Logs now
* interhub protocol now needs to be a spanning tree like in the IRC protocol,
rather than each hub having a direct connection to all its peers... not sure
how well this works, though....
* began work on a bans plugin, maybe it can actually be used for real hubs now..
* added plugin hooks for interhub... only primitive ones, though
* started using diffentiated excepion classes (though the catches still catch
anything...
* a whole bunch of general code shuffling

- 0.9 -
* Pseudo is now in charge :)
* upgraded to ADC 0.9
* switched interhub code to use ADC
* interhubs are now stored in a much more useful way
* moved plugins to separate directory
* started use of exceptions (error.h)
* log(<qerr|qstat>,<msg>) in "error.h" can be used to log messages (fprintf 
use almost totally removed) (yes, I know we have std::log in <cmath>, but
overloads should take care of that
* added command line arguments. Use qhub --help to view
* rewrote ADCSocket parsing code -- now much, much simpler (might fail on big
reads, though... haven't tested)
* plugins currently don't work and cause a segfault :)
* CIDs are checked for validity on login (ie, that they represent a 64-bit
value... untested, but shouldn't break anything)

- pre-0.9 -
20050107 Dont allow users to steal the CID of the hub itself.
