@@ -2,7 +2,7 @@ bin_PROGRAMS = qhub
 AM_CXXFLAGS = -Wall -DDEBUG -g -DCONFIGDIR=\"$(pkgsysconfdir)/\"
 qhub_LDFLAGS = -export-dynamic -rpath $(libdir)
 qhub_SOURCES  = qhub.cpp qhub.h MyTime.h types.h 
-qhub_SOURCES += Util.h Util.cpp string8.h
+qhub_SOURCES += Util.h Util.cpp
 qhub_SOURCES += Encoder.h Encoder.cpp TigerHash.h TigerHash.cpp
 qhub_SOURCES += TokenBucket.h TokenBucket.cpp Socket.h
 qhub_SOURCES += Socket.cpp ServerSocket.cpp ServerSocket.h
